--- a/example/index.html
+++ b/example/index.html
@@ -626,7 +626,7 @@
           </select> </p></form>
 
             <form> 
-            <p><input data-do="go-back" data-on="click" href="#proposer1" type="button" value="Retour" class="buttonpro pull-left"><input type="button" value="Continuer" class="buttonpro pull-right"></p>
+            <p><input data-do="go-back" data-on="click" href="#proposer1" type="button" value="Retour" class="buttonpro pull-left"><input data-do="go-forward" data-on="click" href="#proposer3" type="button" value="Continuer" class="buttonpro pull-right"></p>
             </form>
 
         </section>
@@ -637,6 +637,24 @@
 
 <!--Fin Proposer 2_________________________________________-->
 
+<!--Page Proposer 3 _________________________________________-->
+	<script id="proposer3" type="text/html">
+        <header class="head">
+            <a class="head-btn btn btn-default pull-left" data-do="aside" data-on="click" href="#aside-left"><i class="fa fa-user fa-2x"></i></a>
+            <a class="head-btn btn btn-default pull-right" data-do="modal-open" data-on="click" href="#modal"><i class="fa fa-comment fa-2x"></i></a>
+            <h1 class="title">Proposer</h1>
+        </header>
+	<section class="body with-foot with-head pad">
+	<a class="head-btn btn btn-default pull-right" data-do="go-back" data-on="click" href="#home">
+                <i class="foot-nav-icon fa fa-home fa-2x"></i>
+                <span class="foot-nav-label">Accueil</span>
+	</a>
+	<p class=logo> <img src="images/proposer2.png" alt="Chargement3" align="center">
+	</p>
+	</section>
+	</section>
+	
+<!--Fin proposer 3 _______________________________________-->
 
     <script id="transition" type="text/html">
         <header class="head">
